test action update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: michaelw90/PHP-Lint@master
-    - name: Slack nofity
+    - name: Add comment on failure.
       if: failure()
       uses: thollander/actions-comment-pull-request@master
       with:
-        message: 'Example of message !'
+        message: 'Bleep bloop, I am a bot, PHP Linting failed!'
         GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
