--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,8 @@
-name: 'Terragrunt GitHub Actions'
 on:
   push:
     branches:
       - master
+name: Terragrunt GitHub Actions
 env:
   tf_version: 'latest'
   tg_version: 'latest'
