--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,58 +9,58 @@ env:
   tf_working_dir: '.'
 jobs:
   terragrunt:
-    name: 'Terragrunt - VPC'
+    name: 'Terragrunt - Prod'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
-      - name: 'Terragrunt Format - VPC'
+      - name: 'Terragrunt Format - Prod'
         uses: the-commons-project/terragrunt-github-actions@master
         with:
           tf_actions_version: ${{ env.tf_version }}
           tg_actions_version: ${{ env.tg_version }}
           tf_actions_binary: 'terraform'
           tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: 'devops/prod/vpc'
+          tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Init - VPC'
+      - name: 'Terragrunt Init - Prod'
         uses: the-commons-project/terragrunt-github-actions@master
         with:
           tf_actions_version: ${{ env.tf_version }}
           tg_actions_version: ${{ env.tg_version }}
           tf_actions_binary: 'terraform'
           tf_actions_subcommand: 'init'
-          tf_actions_working_dir: 'devops/prod/vpc'
+          tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Plan'
+      - name: 'Terragrunt Plan - Prod'
         uses: the-commons-project/terragrunt-github-actions@master
         with:
           tf_actions_version: ${{ env.tf_version }}
           tg_actions_version: ${{ env.tg_version }}
           tf_actions_binary: 'terraform'
           tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: 'devops/prod/vpc'
+          tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Apply'
+      - name: 'Terragrunt Apply - Prod'
         uses: the-commons-project/terragrunt-github-actions@master
         with:
           tf_actions_version: ${{ env.tf_version }}
           tg_actions_version: ${{ env.tg_version }}
           tf_actions_binary: 'terraform'
           tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: 'devops/prod/vpc'
+          tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
