--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,7 +36,7 @@ jobs:
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
-          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"
+          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -51,7 +51,7 @@ jobs:
           tf_actions_subcommand: 'plan'
           tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
-          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"
+          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -65,7 +65,7 @@ jobs:
           tf_actions_subcommand: 'apply'
           tf_actions_working_dir: 'devops/prod'
           tf_actions_comment: true
-          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"
+          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
