--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,21 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_backend_config: './terraform.tfvars'
-      - name: 'Terragrunt Plan - Prod'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: 'devops/prod'
-          tf_actions_comment: true
-          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_backend_config: './terraform.tfstate'
       - name: 'Terragrunt Apply - Prod'
         uses: the-commons-project/terragrunt-github-actions@master
         with:
