--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -1,111 +1,15 @@
+---
 on:
   push:
     branches:
       - master
 name: Terragrunt GitHub Actions
-env:
-  tf_version: '0.11.14'
-  tg_version: '0.18.7'
-  tf_working_dir: '.'
 jobs:
   terragrunt:
     name: 'Terragrunt - Prod'
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, terragrunt]
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@master
-      - name: 'Terragrunt Format - Prod'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: 'devops/prod'
-          tf_actions_comment: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Init - Prod'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: 'devops/prod'
-          tf_actions_comment: true
-          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_backend_config: './terraform.tfstate'
-      - name: 'Terragrunt Apply - Prod'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: 'devops/prod'
-          tf_actions_comment: true
-          args: '-backend-config="key=./terraform.tfstate" -backend-config="region=us-east-1" -backend-config="encrypt=true" -backend-config="profile=rhgithubprez" -backend-config="bucket=rh-github-prez-tfstate"'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Format - Prod - Webserver'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: 'devops/prod/webserver'
-          tf_actions_comment: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Init - Prod - Webserver'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: 'devops/prod/webserver'
-          tf_actions_comment: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_backend_config: './terraform.tfstate'
-      - name: 'Terragrunt Plan - Prod - Webserver'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: 'devops/prod/webserver'
-          tf_actions_comment: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 'Terragrunt Apply - Prod - Webserver'
-        uses: the-commons-project/terragrunt-github-actions@master
-        with:
-          tf_actions_version: ${{ env.tf_version }}
-          tg_actions_version: ${{ env.tg_version }}
-          tf_actions_binary: 'terraform'
-          tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: 'devops/prod/webserver'
-          tf_actions_comment: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        uses: actions/checkout@v2
+      - name: 'Echo something'
+        run: echo terragrunt -v
