changing cd stuff again

--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -12,4 +12,4 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v2
       - name: 'Echo something'
-        run: echo terragrunt -v
+        run: terragrunt -v
