--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -3,8 +3,38 @@ on:
   push:
     branches:
       - master
-name: Terragrunt GitHub Actions
+defaults:
+  run:
+    working-directory: ./devops
+name: Packer and Terragrunt Actions
 jobs:
+  packer:
+    runs-on: ubuntu-latest
+    name: packer
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      # fix backwards incompatibilities in template
+      - name: Fix Template
+        uses: operatehappy/packer-github-actions@master
+        with:
+          command: fix
+
+      # validate templates
+      - name: Validate Template
+        uses: operatehappy/packer-github-actions@master
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: packer.json
+
+      # build artifact
+      - name: Build Artifact
+        uses: operatehappy/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -on-error=abort -aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }} -aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }} -region=us-east-1 -build_version=alpha-0.09"
+          target: packer.json
   terragrunt:
     name: 'Terragrunt - Prod'
     runs-on: [self-hosted, terragrunt]
@@ -16,7 +46,7 @@ jobs:
         working-directory: ./devops/prod
         run: |
           terragrunt init
-          terragrunt apply-all
+          terragrunt apply-all --terragrunt-non-interactive
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
