--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -14,11 +14,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      # fix backwards incompatibilities in template
-      - name: Fix Template
-        uses: operatehappy/packer-github-actions@master
-        with:
-          command: fix
 
       # validate templates
       - name: Validate Template
@@ -36,6 +31,7 @@ jobs:
           arguments: "-color=false -on-error=abort -aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }} -aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }} -region=us-east-1 -build_version=alpha-0.09"
           target: packer.json
   terragrunt:
+    needs: [packer]
     name: 'Terragrunt - Prod'
     runs-on: [self-hosted, terragrunt]
     steps:
