--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v2
+      - name: 'Librarian-chef'
+        shell: bash
+        run: |
+          librarian-chef install
       - name: 'Packer build'
         shell: bash
         run: |
