--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -27,6 +27,10 @@ jobs:
           -var "region=us-east-1" \
           -var "build_version=alpha-0.09" \
           packer.json
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
       - name: 'Execute terragrant apply-all'
         shell: bash
         working-directory: ./devops/prod
