--- a/.github/workflows/cd-terraform.yml
+++ b/.github/workflows/cd-terraform.yml
@@ -3,13 +3,47 @@ on:
   push:
     branches:
       - master
-name: Terragrunt GitHub Actions
+    tags:
+      - v*
+
+defaults:
+  run:
+    working-directory: ./devops
+name: Packer and Terragrunt Actions
 jobs:
-  terragrunt:
-    name: 'Terragrunt - Prod'
+  deploy:
+    name: 'Packer and Terragrunt - Prod'
     runs-on: [self-hosted, terragrunt]
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v2
-      - name: 'Echo something'
-        run: terragrunt -v
+      - name: 'Librarian-chef'
+        shell: bash
+        run: |
+          librarian-chef install
+      - name: Set env
+        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+      - name: 'Packer build'
+        shell: bash
+        run: |
+          packer build \
+          -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+          -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+          -var "region=us-east-1" \
+          -var "build_version=${{ env.RELEASE_VERSION }}" \
+          packer.json
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
+      - name: 'Execute terragrant apply-all'
+        shell: bash
+        working-directory: ./devops/prod
+        run: |
+          terragrunt init
+          terragrunt apply-all --terragrunt-non-interactive
+          echo 'test'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
